# cpp-life-of-boids

./: CMakeLists.txt  README.md  conanfile.txt
.ci/: build-unix.sh  build-windows.sh  build.sh  info.sh  install.sh  test.sh
.github/workflows/: main.yml
src/: CMakeLists.txt  glx.cpp  glx.hpp  main.cpp  main_opencv.cpp
src/shaders/: lines.hpp  points.hpp  triangle.hpp
tests/: CMakeLists.txt  first_test.cpp
